ebook DRA: partial fix for opening

Opening in DRA mode synchronously completely skipped opening
the backend on the server side. Opening asynchronously got the
order wrong and opened in the client before letting the server
complete its work.

As a result, the client randomly ran into database errors when
accessing the database too early. For unknown reasons this started
to happen a lot after merging with the changes made between (roughly)
EDS 3.6.3 and 3.6.4.

This fix is not a proper solution because it involves synchronous
local calls in cases where asynchronous calls should be used.

See https://bugzilla.gnome.org/show_bug.cgi?id=697106